# simplifyline

./: CMakeLists.txt  README.md  dev-requirements.txt  pytest.ini  setup.py  test-requirements.txt
.github/workflows/: tests.yml  wheels.yml
bench/: CMakeLists.txt  bench-lib.cpp
docs/: builddocs.html  genindex.html  index.html  introduction.html  objects.inv  search.html  searchindex.js
docs/benchmarks/: python.html
docs/cpp_api/: class_simplify_line_1_1_matrix.html  class_view_hierarchy.html  cpp_library_root.html  dir_include.html  dir_include_SimplifyLine.html  file_include_SimplifyLine_SimplifyLine.hpp.html  file_include_SimplifyLine_Types.hpp.html  file_include_SimplifyLine_Utility.hpp.html  file_view_hierarchy.html  function__simplify_line_8hpp_1a3256d24da522df0f2054e2213dcc2b73.html  function__simplify_line_8hpp_1a6f47d12477d1280ac073939610e674c7.html  function__simplify_line_8hpp_1abb4a844f6f1e4a94482f2b68322ea282.html  function__simplify_line_8hpp_1ae6c886e957908d72f762c71b6a1c68a3.html  namespace_SimplifyLine.html  namespace_SimplifyLine__Utility.html  program_listing_file_include_SimplifyLine_SimplifyLine.hpp.html  program_listing_file_include_SimplifyLine_Types.hpp.html  program_listing_file_include_SimplifyLine_Utility.hpp.html  struct_simplify_line_1_1_utility_1_1faux__unroll.html  struct_simplify_line_1_1_utility_1_1faux__unroll_3_010u_00_012u_01_4.html  struct_simplify_line_1_1_utility_1_1faux__unroll_3_010u_00_013u_01_4.html  unabridged_api.html  unabridged_orphan.html
docs/python_api/: simplifyline.MatrixDouble.html  simplifyline.VectorDouble.html  simplifyline.VectorInt.html  simplifyline.VectorUInt8.html  simplifyline.VectorULongInt.html  simplifyline.get_simplifyline_version.html  simplifyline.helper.html  simplifyline.helper.pure_python_hello.html  simplifyline.html  simplifyline.simplify_line_2d.html  simplifyline.simplify_line_3d.html  simplifyline.simplify_radial_dist_2d.html  simplifyline.simplify_radial_dist_3d.html
docs/tutorial/C++/: basic.html  index.html
docs/tutorial/Python/: basicdemo.html  basicdemo.ipynb  index.html
examples/cpp/: CMakeLists.txt  example1.cpp
examples/python/: example1.py  example_2d.py
examples/python/notebooks/: BasicDemo.ipynb
examples/python/test/: failure.py
fixtures/points/: example_1.npy
include/SimplifyLine/: SimplifyLine.hpp  Types.hpp  Utility.hpp
src/: CMakeLists.txt  version.txt
src/Python/: CMakeLists.txt  MANIFEST.in  README.md  make_python_package.cmake  setup.py
src/Python/simplifyline/: __init__.py
src/Python/simplifyline_pybind/: simplifyline_pybind.cpp  simplifyline_pybind.hpp
src/Python/simplifyline_pybind/docstring/: docstring.cpp  docstring.hpp
src/Python/simplifyline_pybind/types/: bind_types.cpp  bind_types.hpp
src/SimplifyLine/: CMakeLists.txt  SPLConfig.cpp  SPLConfig.hpp.in  SimplifyLine.cpp
src_docs/: Doxyfile  builddocs.rst  conf.py  index.rst  introduction.rst  make_docs.py
src_docs/benchmarks/: python.rst
tests/cpp/: CMakeLists.txt  test-simplifyline.cpp
tests/python/: basic_test.py  bench_test.py  conftest.py
